--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p class="form-item-label"><span class="form-item-label-required">必須</span>お問い合わせ内容</p>
       <textarea class="form-item-textarea"></textarea>
     </div>
-    <input type="submit" class="form-btn" value="送信する">
+    <input type="submit" class="form-btn" value="送信す-る">
   </form>
 </body>
 
